# Math-Info-L3-Project

./: .github-ci.yml  .gitignore  README.md  dune-project  prjt_mi_recolor.opam  test_on_files.sh
.github/: ocaml_fork.yml
.github/workflows/: ocaml.yml  ocaml_fork.yml
file_tests/input/: test_1.txt  test_10.txt  test_11.txt  test_12.txt  test_13.txt  test_14.txt  test_15.txt  test_16.txt  test_17.txt  test_18.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt  test_7.txt  test_8.txt  test_9.txt
file_tests/input_display/: test_1.txt  test_10.txt  test_11.txt  test_12.txt  test_13.txt  test_14.txt  test_15.txt  test_16.txt  test_17.txt  test_18.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt  test_7.txt  test_8.txt  test_9.txt
file_tests/interesting_outputs/: test_10.txt  test_17.txt  test_18.txt  test_4.txt  test_7.txt  test_9.txt
file_tests/interressant_outputs/: test_16.txt
lib/: cnf_graph.ml  cnf_graph.mli  dune  generator_graph.ml  generator_graph.mli  graph.ml  graph.mli
lib/Parser/: parser.ml  parser.mli
lib/SAT_Solver/: cnf.ml  cnf.mli  dpll.ml  dpll.mli
test/: dune
