(lang dune 3.11)

(name prjt_mi_recolor)

(generate_opam_files true)

(source
 (uri git+https://github.com/GabinDDL/Math-Info-L3-Project))

(authors "Gabin Dudillieu" "Thomas Arrous")

(maintainers "Gabin Dudillieu" "Thomas Arrous")

(license LICENSE)

(package
 (name prjt_mi_recolor)
 (synopsis "A project about recoloration in graph")
 (description "This project concern a L3 Maths and CS UE, which is about recoloration")
 (depends ocaml dune)
 (tags
  ("ocaml" "recoloration" "graph")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project

